--- a/package.json
+++ b/package.json
@@ -10,8 +10,21 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.10",
+    "immutable": "^4.0.0-rc.12",
     "react": "16.13.1",
-    "react-native": "0.63.2"
+    "react-native": "0.63.2",
+    "react-native-file-viewer": "^2.1.4",
+    "react-native-flash-message": "^0.1.16",
+    "react-native-gesture-handler": "^1.8.0",
+    "react-native-html-to-pdf": "^0.8.0",
+    "react-native-screens": "^2.11.0",
+    "react-native-spinkit": "^1.5.1",
+    "react-navigation": "^4.4.2",
+    "react-navigation-stack": "^2.8.4",
+    "react-redux": "^7.2.1",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
