--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/stack": "^5.10.0",
     "immutable": "^4.0.0-rc.12",
     "react": "16.13.1",
     "react-native": "0.63.2",
@@ -18,6 +19,7 @@
     "react-native-flash-message": "^0.1.16",
     "react-native-gesture-handler": "^1.8.0",
     "react-native-html-to-pdf": "^0.8.0",
+    "react-native-safe-area-context": "^3.1.8",
     "react-native-screens": "^2.11.0",
     "react-native-spinkit": "^1.5.1",
     "react-navigation": "^4.4.2",
