--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-flash-message": "^0.1.16",
     "react-native-gesture-handler": "^1.8.0",
     "react-native-html-to-pdf": "^0.8.0",
+    "react-native-keyboard-aware-scrollview": "^2.1.0",
     "react-native-safe-area-context": "^3.1.8",
     "react-native-screens": "^2.11.0",
     "react-native-spinkit": "^1.5.1",
